--- a/SignInUpWeek99/SignInUpWeek99.csproj
+++ b/SignInUpWeek99/SignInUpWeek99.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminCheck.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminCheck.Designer.cs">
+      <DependentUpon>AdminCheck.cs</DependentUpon>
+    </Compile>
     <Compile Include="BL\MUser.cs" />
     <Compile Include="DL\MUserDL.cs" />
     <Compile Include="Program.cs" />
@@ -68,6 +74,9 @@
     <Compile Include="SignUp.Designer.cs">
       <DependentUpon>SignUp.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AdminCheck.resx">
+      <DependentUpon>AdminCheck.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
