--- a/SignInUpWeek99/SignInUpWeek99.csproj
+++ b/SignInUpWeek99/SignInUpWeek99.csproj
@@ -52,6 +52,12 @@
     <Compile Include="AdminCheck.Designer.cs">
       <DependentUpon>AdminCheck.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdminKeyChecked.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminKeyChecked.Designer.cs">
+      <DependentUpon>AdminKeyChecked.cs</DependentUpon>
+    </Compile>
     <Compile Include="BL\MUser.cs" />
     <Compile Include="DL\MUserDL.cs" />
     <Compile Include="Program.cs" />
@@ -74,8 +80,17 @@
     <Compile Include="SignUp.Designer.cs">
       <DependentUpon>SignUp.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserMenu.Designer.cs">
+      <DependentUpon>UserMenu.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AdminCheck.resx">
       <DependentUpon>AdminCheck.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminKeyChecked.resx">
+      <DependentUpon>AdminKeyChecked.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -95,6 +110,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SignUp.resx">
       <DependentUpon>SignUp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserMenu.resx">
+      <DependentUpon>UserMenu.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
