--- a/SignInUpWeek99/SignInUpWeek99.csproj
+++ b/SignInUpWeek99/SignInUpWeek99.csproj
@@ -58,6 +58,8 @@
     <Compile Include="AdminKeyChecked.Designer.cs">
       <DependentUpon>AdminKeyChecked.cs</DependentUpon>
     </Compile>
+    <Compile Include="BL\Burger.cs" />
+    <Compile Include="BL\Deals.cs" />
     <Compile Include="BL\MUser.cs" />
     <Compile Include="BurgerMenu.cs">
       <SubType>Form</SubType>
@@ -65,6 +67,8 @@
     <Compile Include="BurgerMenu.Designer.cs">
       <DependentUpon>BurgerMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="DL\BurgerDL.cs" />
+    <Compile Include="DL\DealDL.cs" />
     <Compile Include="DL\MUserDL.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -145,7 +149,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Microsoft\VisualBasic\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\beans.jpeg" />
   </ItemGroup>
