--- a/SignInUpWeek99/SignInUpWeek99.csproj
+++ b/SignInUpWeek99/SignInUpWeek99.csproj
@@ -73,11 +73,23 @@
     <Compile Include="BurgerMenu.Designer.cs">
       <DependentUpon>BurgerMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="ContactMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ContactMenu.Designer.cs">
+      <DependentUpon>ContactMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="DealMenu.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DealMenu.Designer.cs">
       <DependentUpon>DealMenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DeliveryMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DeliveryMenu.Designer.cs">
+      <DependentUpon>DeliveryMenu.cs</DependentUpon>
     </Compile>
     <Compile Include="DL\BurgerDL.cs" />
     <Compile Include="DL\DealDL.cs" />
@@ -126,8 +138,14 @@
     <EmbeddedResource Include="BurgerMenu.resx">
       <DependentUpon>BurgerMenu.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ContactMenu.resx">
+      <DependentUpon>ContactMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DealMenu.resx">
       <DependentUpon>DealMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DeliveryMenu.resx">
+      <DependentUpon>DeliveryMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
